# serializer version: 1
# name: TestOXDNAReading.test_comparing_topologies[top_new]
  list([
    list([
      1,
      2,
    ]),
    list([
      2,
      3,
    ]),
    list([
      3,
      4,
    ]),
    list([
      4,
      5,
    ]),
    list([
      5,
      6,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].1
  '''
  AttributeArray 'res_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [ 1  2  3  4  5  6  7  8  9 10 11 12]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].2
  '''
  AttributeArray 'chain_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [0 0 0 0 0 0 0 0 0 0 0 0]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new].3
  '''
  AttributeArray 'res_name' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [42 43 43 42 41 42 41 42 41 40 40 41]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom]
  list([
    list([
      5,
      6,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].1
  '''
  AttributeArray 'res_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [ 1  2  3  4  5  6  7  8  9 10 11 12]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].2
  '''
  AttributeArray 'chain_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [0 0 0 0 0 0 1 1 1 1 1 1]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_new_custom].3
  '''
  AttributeArray 'res_name' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [42 43 -1 42 41 42 41 42 41 -1 40 41]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old]
  list([
    list([
      0,
      1,
    ]),
    list([
      1,
      2,
    ]),
    list([
      2,
      3,
    ]),
    list([
      3,
      4,
    ]),
    list([
      4,
      5,
    ]),
    list([
      6,
      7,
    ]),
    list([
      7,
      8,
    ]),
    list([
      8,
      9,
    ]),
    list([
      9,
      10,
    ]),
    list([
      10,
      11,
    ]),
  ])
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].1
  '''
  AttributeArray 'res_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [ 1  2  3  4  5  6  7  8  9 10 11 12]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].2
  '''
  AttributeArray 'chain_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [0 0 0 0 0 0 1 1 1 1 1 1]
  '''
# ---
# name: TestOXDNAReading.test_comparing_topologies[top_old].3
  '''
  AttributeArray 'res_name' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (12,), dtype: int32)
  [42 41 42 43 43 42 41 42 41 40 40 41]
  '''
# ---
# name: TestOXDNAReading.test_univ_snapshot
  '''
  AttributeArray 'position' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (98, 3), dtype: float32)
  [[-2.7138824e+00  3.4791164e+00  6.1171227e+00]
   [-2.8463097e+00  3.6931610e+00  5.7212029e+00]
   [-2.8210258e+00  4.0057602e+00  5.3080921e+00]
   [-2.7083244e+00  4.3448524e+00  4.9548016e+00]
   [-2.3138313e+00  4.6292629e+00  4.5932236e+00]
   [-1.8684769e+00  4.6140079e+00  4.2770271e+00]
   [-1.5482597e+00  4.5223103e+00  3.9704971e+00]
   [-1.3917313e+00  4.3938713e+00  3.4201584e+00]
   [-1.3534927e+00  4.1653500e+00  2.9767361e+00]
   [-1.6068573e+00  4.0547848e+00  2.4795074e+00]
   [-1.9120026e+00  4.2194214e+00  1.9766350e+00]
   [-1.5805130e+00  3.0099525e+00  9.0211678e-01]
   [-1.1515579e+00  2.8484859e+00  7.2095490e-01]
   [-7.6826859e-01  2.8051739e+00  4.1145325e-01]
   [-4.1724777e-01  3.0141125e+00  8.0997467e-02]
   [-1.2509537e-01  3.4365292e+00 -1.2720680e-01]
   [ 1.3741684e-01  3.8444061e+00 -1.5759468e-01]
   [ 5.4441833e-01  4.1730747e+00 -1.9363403e-02]
   [ 7.2358704e-01  4.4454098e+00  3.6747169e-01]
   [ 1.0546837e+00  4.6004448e+00  7.6171494e-01]
   [ 1.3879433e+00  4.5157433e+00  1.0847244e+00]
   [ 1.9163780e+00  4.4817028e+00  1.2129421e+00]
   [ 2.0865440e+00  4.4288559e+00  5.7371140e-02]
   [ 1.8265953e+00  4.0282497e+00  1.1267471e-01]
   [ 1.5634842e+00  3.6516533e+00  3.1704521e-01]
   [ 1.1997223e+00  3.3754196e+00  5.9341812e-01]
   [ 7.3556519e-01  3.3637295e+00  8.6157608e-01]
   [ 2.4372101e-01  3.5476303e+00  1.0454330e+00]
   [-1.8317413e-01  3.7103367e+00  1.0024986e+00]
   [-6.2085342e-01  3.9043579e+00  8.5454559e-01]
   [-9.7406387e-01  3.9733963e+00  3.8663101e-01]
   [-1.4600334e+00  3.8147163e+00  8.9387894e-02]
   [-1.6907425e+00  3.3627243e+00 -1.6932297e-01]
   [-2.0740089e+00  2.9869614e+00 -2.2468758e-01]
   [-2.3362885e+00  2.5477276e+00 -5.7926178e-03]
   [-2.7286968e+00  2.3224678e+00  3.2230568e-01]
   [-3.1526585e+00  2.3357391e+00  6.6704941e-01]
   [-3.5110092e+00  2.5070114e+00  1.0047703e+00]
   [-4.0384560e+00  2.7614460e+00  1.0019493e+00]
   [-4.5913486e+00  2.9023895e+00  9.6636963e-01]
   [-5.0888767e+00  2.9325047e+00  6.9366264e-01]
   [-5.4162903e+00  2.8099861e+00  3.3957672e-01]
   [-5.7866611e+00  2.4631443e+00  5.2593231e-02]
   [-5.9920197e+00  2.0448418e+00 -1.2223816e-01]
   [-5.9997692e+00  1.9734287e+00  1.1036682e+00]
   [-5.5273228e+00  1.8245525e+00  9.9346161e-01]
   [-5.0942116e+00  1.6920528e+00  7.2891235e-01]
   [-4.6884003e+00  1.8334522e+00  4.0220642e-01]
   [-4.3456192e+00  2.1011963e+00  1.0684204e-01]
   [-4.1231594e+00  2.5469608e+00 -1.4982224e-01]
   [-3.6527462e+00  2.9151516e+00 -2.2686386e-01]
   [-3.2964954e+00  3.3127365e+00 -3.4194946e-02]
   [-2.9539280e+00  3.5246315e+00  3.6555481e-01]
   [-2.5999851e+00  3.3743305e+00  7.1829605e-01]
   [-2.1096039e+00  3.1630688e+00  9.3057251e-01]
   [-2.0509777e+00  4.6262474e+00  1.6397018e+00]
   [-2.2292252e+00  5.0694790e+00  1.4414101e+00]
   [-2.2958488e+00  5.5416260e+00  1.3933601e+00]
   [-2.0807629e+00  6.1317940e+00  1.2567444e+00]
   [-1.7010841e+00  6.4575863e+00  1.1741447e+00]
   [-1.3750229e+00  6.7377949e+00  8.6135864e-01]
   [-9.9110794e-01  6.7140656e+00  5.3256226e-01]
   [-6.7618179e-01  6.7548103e+00  8.2313538e-02]
   [-6.3737106e-01  6.7594032e+00 -4.7126007e-01]
   [-7.7611923e-01  6.8563175e+00 -9.7397995e-01]
   [-9.4001389e-01  7.1366291e+00 -1.4098930e+00]
   [-1.0250702e+00  7.6492214e+00 -1.6316185e+00]
   [-7.9809570e-01  7.9958878e+00 -1.8138809e+00]
   [-1.5895576e+00  8.8968563e+00 -1.8951416e+00]
   [-1.3954277e+00  8.1706085e+00 -2.5620670e+00]
   [-1.8104744e+00  8.4045219e+00 -3.1960545e+00]
   [-1.3834267e+00  8.3991318e+00 -3.1177654e+00]
   [-9.0402603e-01  8.2759457e+00 -2.8730659e+00]
   [-5.9803772e-01  8.6592407e+00 -2.7193146e+00]
   [-6.2319946e-01  9.0870514e+00 -2.4606762e+00]
   [-5.4508591e-01  9.3116169e+00 -1.9825974e+00]
   [-6.1635208e-01  7.9232025e+00 -6.3807678e-01]
   [-1.0416641e+00  7.8818893e+00 -4.1232681e-01]
   [-1.5159798e+00  7.5313969e+00 -3.7136459e-01]
   [-1.7500191e+00  6.9739151e+00 -3.8726044e-01]
   [-1.8442078e+00  6.4958820e+00 -1.8052673e-01]
   [-1.7237282e+00  6.0165997e+00 -3.8745880e-02]
   [-1.5234451e+00  5.6544170e+00  2.2925186e-01]
   [-1.1997833e+00  5.6127586e+00  6.1458969e-01]
   [-1.0976830e+00  5.4244900e+00  1.0567970e+00]
   [-1.0898972e+00  5.3482037e+00  1.6406021e+00]
   [-1.1517792e+00  5.2143936e+00  2.1370583e+00]
   [-1.5415535e+00  5.2257309e+00  2.5032616e+00]
   [-1.9606743e+00  5.1641045e+00  2.7994156e+00]
   [-2.3469372e+00  4.8737125e+00  3.0001488e+00]
   [-2.5615959e+00  4.4869499e+00  3.3770294e+00]
   [-2.5858231e+00  3.9795494e+00  3.6565018e+00]
   [-2.4421329e+00  3.6174355e+00  4.0833015e+00]
   [-2.1217442e+00  3.4555511e+00  4.4443855e+00]
   [-1.8201523e+00  3.4756947e+00  4.8104858e+00]
   [-1.6914062e+00  3.6929245e+00  5.3208961e+00]
   [-1.7082825e+00  4.0566597e+00  5.7222252e+00]
   [-1.9125938e+00  4.3861561e+00  6.0827942e+00]]
  '''
# ---
# name: TestOXDNAReading.test_univ_snapshot.1
  '''
  AttributeArray 'res_name' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (98,), dtype: int32)
  [41 41 41 40 41 40 41 42 40 42 43 41 41 43 40 40 41 42 43 41 41 41 42 42
   42 40 41 42 43 43 40 42 42 43 42 40 43 40 41 42 43 42 42 42 41 41 41 40
   41 42 43 40 43 41 40 42 42 41 43 43 40 42 43 41 41 41 43 43 43 43 43 43
   43 43 43 43 42 42 42 40 41 43 40 40 42 41 41 40 41 43 41 42 43 42 43 42
   42 42]
  '''
# ---
# name: TestOXDNAReading.test_univ_snapshot.2
  '''
  AttributeArray 'res_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (98,), dtype: int32)
  [ 1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24
   25 26 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44 45 46 47 48
   49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65 66 67 68 69 70 71 72
   73 74 75 76 77 78 79 80 81 82 83 84 85 86 87 88 89 90 91 92 93 94 95 96
   97 98]
  '''
# ---
# name: TestOXDNAReading.test_univ_snapshot.3
  '''
  AttributeArray 'chain_id' from NewOXDNAObject('NewOXDNAObject')(domain: POINT, shape: (98,), dtype: int32)
  [0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 1 1 1 1 1 1 1 1 1 1 1 1 1 1 1
   1 1 1 1 1 1 1 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2 2
   2 2 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3 3]
  '''
# ---
